--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "weather-cli",
   "version": "1.0.0",
   "description": "CLI for getting weather",
-  "bin": "./index.js",
-  "main": "index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node weather.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,9 @@
     "url": "https://github.com/NizamovArturV/nodejs-weather-cli/issues"
   },
   "homepage": "https://github.com/NizamovArturV/nodejs-weather-cli#readme",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.3.4",
+    "chalk": "^5.2.0"
+  }
 }
